--- a/main.css
+++ b/main.css
@@ -18,6 +18,7 @@ body{
     padding-bottom: 10px;
     padding-left: 5px;
     padding-right: 5px;
+    word-wrap: break-word;
     
     margin: 0 auto;
     border: 1px solid black;
