--- a/main.css
+++ b/main.css
@@ -66,7 +66,7 @@ body{
     border-bottom: solid white 1px;  
 }
 #space{
-    color:purple;
+    color:#b710b7;
     font-size: 0.75em;
 }
 .symbols{
